--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: 潘柏信
+title: 卢奇华
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
 avatarTitle: leopardpan
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+avatarDesc: android / web
+url: "http://www.luqihua.cn"
 
 # Comment
 comment:
@@ -15,10 +15,10 @@ comment:
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
+    weibo: 82172436 
+    github: luqihua
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: 15960085046@163.com
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
