--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ blog_button:
 
 # Navigation buttons in the front page.s
 nav:
-    - {title: 百度, description: archive, url: 'http://www.baidu.com'}   
+    - {title: 所有文章, description: archive, url: '/archive'}   
     - {title: 标签, description: tags, url: '/tags'}      
     - {title: 关于我, description: about, url: '/about'}      
     
